# run_crab_run

./: .gitignore  Cargo.toml  DEVELOPMENT.md  PLAN.md  zellij.kdl
backend/: Dockerfile  package-lock.json  package.json  readme.txt  tables.txt  tsconfig.json
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs
backend/src/: auth.ts  db.ts  server.ts
backend/src/routes/: jobs.ts  runs.ts
config/: default.toml
crates/rcr-api/: Cargo.toml
crates/rcr-api/src/: error.rs  lib.rs  main.rs  sse.rs  state.rs
crates/rcr-api/src/routes/: jobs.rs  mod.rs  runs.rs  trigger.rs  webhooks.rs
crates/rcr-core/: Cargo.toml
crates/rcr-core/src/: error.rs  lib.rs  notify.rs
crates/rcr-core/src/models/: config.rs  job.rs  mod.rs  run.rs  trigger.rs  webhook.rs
crates/rcr-db/: Cargo.toml
crates/rcr-db/src/: jobs.rs  lib.rs  migrations.rs  runs.rs  webhooks.rs
crates/rcr-runner/: Cargo.toml
crates/rcr-runner/src/: executor.rs  lib.rs  main.rs  monitor.rs  notify.rs  scheduler.rs
crates/rcr-ui/: Cargo.toml  Trunk.toml  index.html  style.css
crates/rcr-ui/src/: api.rs  app.rs  config.rs  lib.rs  main.rs  util.rs
crates/rcr-ui/src/pages/: create_job.rs  dashboard.rs  edit_job.rs  jobs.rs  mod.rs  run_detail.rs  runs.rs
crates/run-crab-run/: Cargo.toml
crates/run-crab-run/src/: main.rs
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/helpers/: api.ts  format.ts
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/pages/jobs/: JobsPage.tsx  helpers.ts  store.ts
frontend/src/pages/login/: LoginPage.tsx  helpers.ts  store.ts
frontend/src/pages/runs/: RunDetailPage.tsx  RunsPage.tsx  helpers.ts  store.ts
frontend/src/pages/ui/: store.ts
frontend/src/stores/: root_store.ts  types.ts
infrastructure/: .env.local.example  deploy.ts  k8s_backend.yaml  k8s_frontend.yaml  k8s_ingress.yaml  k8s_namespace.yaml  k8s_supabase.yaml  package.json  tsconfig.json
infrastructure/migrations/: 001_create_jobs_runs.sql
runner/: Dockerfile  package-lock.json  package.json
runner/src/: index.ts  runner.ts
static/: index.html  style.css
supabase/: config.toml
