[workspace]
members = [
    "crates/rcr-core",
    "crates/rcr-db",
    "crates/rcr-runner",
    "crates/rcr-api",
    "crates/rcr-ui",
]
resolver = "2"

[workspace.dependencies]
# Shared versions across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rrule = "0.13"
sysinfo = "0.33"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"