[package]
name = "rcr-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rcr-core = { path = "../rcr-core" }
rcr-db = { path = "../rcr-db" }
rcr-runner = { path = "../rcr-runner" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }
http = "1"