[package]
name = "rcr-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rcr-core = { path = "../rcr-core" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }