[package]
name = "run-crab-run"
version = "0.1.0"
edition = "2021"

[dependencies]
rcr-core = { path = "../rcr-core" }
rcr-db = { path = "../rcr-db" }
rcr-runner = { path = "../rcr-runner" }
rcr-api = { path = "../rcr-api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }